modified table for candidate and panelist and view panel

--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -166,7 +166,7 @@
     <div class="container-fluid my-5" *ngFor="let drive of specificDriveData">
         <!-- {{drive | json}} -->
         <div>
-            <table class="table table-bordered table-striped table-hover display">
+            <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
                 <tr>
                     <th>Candidate Name</th>
