made changes and implemented role based authorization

--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -7,7 +7,7 @@
     
     <div class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right ">
-            <li><a routerLink="/home" routerLinkActive="active active-content" [routerLinkActiveOptions]="{exact:true}" (click)="onSelect('dashboard')" class="text-dark">DashBoard</a></li>
+            <li><a routerLink="/home" routerLinkActive="active active-content" [routerLinkActiveOptions]="{exact:true}" (click)="onSelect('dashboard')" class="text-dark" *ngIf="userRole=='admin'">DashBoard</a></li>
             <li><a routerLink="/drive-management" routerLinkActive="active active-content" [routerLinkActiveOptions]="{exact:true}" (click)="onSelect('drive-management')" class="text-dark">Drive Management</a></li>
         </ul>
        
