modifed the manage candidate and manage panelist

--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -163,9 +163,9 @@
         </div>
     </div>
 
-    <div class="container-fluid my-5" *ngFor="let drive of specificDriveData">
+    <div class="container-fluid my-5">
         <!-- {{drive | json}} -->
-        <div>
+        <div *ngFor="let drive of specificDriveData">
             <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
                 <tr>
@@ -173,6 +173,8 @@
                     <th>Candidate Email</th>
                     <th>Candidate Phone Number</th>
                     <th>Graduation Year</th>
+                    <th>Interview Details</th>
+                    
                 </tr>
                 </thead>
                 <tbody>
@@ -181,9 +183,79 @@
                     <td>{{ candidate.candidate_email }}</td>
                     <td>{{ candidate.candidate_contact }}</td>
                     <td>{{ candidate.graduation_year }}</td>
+                    <td class="text-success text-center">
+                        <svg role="button" (click)="openInterviewDetailsForm(candidate.candidate_email)" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+                            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                        </svg>
+                    </td>
+                    <!-- <td *ngFor="let item of panelCandidateData;let i=index">
+                        <tr *ngFor="let data of item">{{data | json}}</tr>
+                    </td> -->
                 </tr>
                 </tbody>
             </table>
+        </div>
+
+        <div>
+            <div
+                class="modal dark"
+                id="interviewData"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+            >
+                <div class="modal-dialog modal-xl modal-dialog-centered entity-form">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">View Entity</h5>
+                    <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                    ></button>
+                    </div>
+                    <!-- <div>{{ panelCandidateData | json}}</div> -->
+                    <div class="modal-body">
+                    <table class="table table-bordered table-striped table-hover display" >
+                        <thead>
+                            <tr>
+                                <th>Panel</th>
+                                <th>Interview Round</th>
+                                <th>Interview Date</th>
+                                <th>Interview Time</th>
+                                <th>Selection Status</th>
+                                <th>Feedback</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="view" *ngFor="let data of panelCandidateData;let i=index">
+                                <td>{{data.panel_title }}</td>
+                                <td>{{data.round_title }}</td>
+                                <td>{{data.candidate_interview_date}}</td>
+                                <td>{{data.candidate_interview_time}}</td>
+                                <td>{{data.status}}</td>
+                                <td>{{data.feedback}}</td>
+                            </tr>
+                        </tbody>
+                        <tbody *ngIf="panelCandidateData?.length == 0">
+                            <tr>
+                                <td colspan="6" class="no-data-available text-center">No data!</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                            Close
+                        </button>
+                    </div>
+                </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
