--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -184,7 +184,7 @@
                     <td>{{ candidate.candidate_contact }}</td>
                     <td>{{ candidate.graduation_year }}</td>
                     <td class="text-success text-center">
-                        <svg role="button" (click)="openInterviewDetailsForm(candidate.candidate_email)" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                        <svg role="button" (click)="openInterviewDetailsForm(candidate.candidate_email, candidate.candidate_first_name, candidate.candidate_last_name)" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
                             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
                             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
                         </svg>
@@ -199,13 +199,13 @@
 
         <div>
             <div
-                class="modal dark"
+                class="modal dark "
                 id="interviewData"
                 tabindex="-1"
                 aria-labelledby="exampleModalLabel"
                 aria-hidden="true"
             >
-                <div class="modal-dialog modal-xl modal-dialog-centered entity-form">
+                <div class="modal-dialog modal-xl modal-dialog-centered show-interview">
                 <div class="modal-content">
                     <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">View Entity</h5>
@@ -221,6 +221,7 @@
                     <table class="table table-bordered table-striped table-hover display" >
                         <thead>
                             <tr>
+                                <th>Name</th>
                                 <th>Panel</th>
                                 <th>Interview Round</th>
                                 <th>Interview Date</th>
@@ -231,6 +232,7 @@
                         </thead>
                         <tbody>
                             <tr class="view" *ngFor="let data of panelCandidateData;let i=index">
+                                <td>{{candidateName}}</td>
                                 <td>{{data.panel_title }}</td>
                                 <td>{{data.round_title }}</td>
                                 <td>{{data.candidate_interview_date}}</td>
@@ -241,7 +243,7 @@
                         </tbody>
                         <tbody *ngIf="panelCandidateData?.length == 0">
                             <tr>
-                                <td colspan="6" class="no-data-available text-center">No data!</td>
+                                <td colspan="7" class="no-data-available text-center">No data!</td>
                             </tr>
                         </tbody>
                     </table>
