--- a/src/app/components/drive-management/view-drive-list/view-drive-list.component.html
+++ b/src/app/components/drive-management/view-drive-list/view-drive-list.component.html
@@ -3,7 +3,7 @@
 
     
 <div class="container-fluid view-drive">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb bread">
         <li class="breadcrumb-item"><a routerLink="/drive-management">Drive Management</a></li>
         <li class="breadcrumb-item"><a routerLink="/drive-list">View Drive</a></li>
       </ol>
