--- a/src/app/components/drive-management/manage-panelist/manage-panelist.component.html
+++ b/src/app/components/drive-management/manage-panelist/manage-panelist.component.html
@@ -1,6 +1,10 @@
 <app-header></app-header>
 <app-side-bar></app-side-bar>
 <div class="container-fluid panelist-info">
+    <ol class="breadcrumb bread">
+        <li class="breadcrumb-item"><a routerLink="/drive-management">Drive Management</a></li>
+        <li class="breadcrumb-item"><a routerLink="/manage-panelist">Manage Panelist</a></li>
+    </ol>
     <div class="switch-drive">
         <label for="Drive">Switch Drive:</label>
         <select class="mx-2" id="role" name="drive" #drives ngModel (change)="getSpecificDrive(drives.value)">
