did some enhancement in the project section

--- a/src/app/components/drive-management/panel-form/panel-form.component.css
+++ b/src/app/components/drive-management/panel-form/panel-form.component.css
@@ -35,3 +35,12 @@ input{
     width: 80%;
     margin-left: 230px;
 }
+
+.candidate-list {
+    list-style-type: none;
+}
+
+.anyClass {
+    height:100px;
+    overflow-y: scroll;
+}
