--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
             
             <div class="header text-center">
                 <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" class="wg-logo">
-                <h2>Welcome Back</h2>
+                <h2>Welcome</h2>
                 <h4>Log in to your account using email and password</h4>
             </div>
 
