--- a/src/app/components/drive-management/panel-form/panel-form.component.html
+++ b/src/app/components/drive-management/panel-form/panel-form.component.html
@@ -53,6 +53,11 @@
           <div class="col-sm-3">
             <app-show-candidate [specificCandidateData]="specificCandidateData" (candidateData)="candidateDetails($event)" ngModel></app-show-candidate>
           </div>
+          <div class="anyClass col-sm-3" *ngIf="showCandidate">
+            <ul>
+              <li class="candidate-list" *ngFor="let item of selectedCandidate">{{item}}</li>
+            </ul>
+          </div>    
         </div>
         
         <div class="form-group row description-data">
@@ -61,6 +66,11 @@
             <!-- <input class="form-control" type="text" id="panelist_name" name="panelist_name" ngModel> -->
             <app-show-panelist [panelistData]="specificDrivePanelist" (panelistRecord)="panelistDetails($event)" ngModel></app-show-panelist>
           </div>
+          <div class="anyClass col-sm-3" *ngIf="showCoordinator">
+            <ul>
+              <li class="candidate-list" *ngFor="let item of selectedPanelist">{{item}}</li>
+            </ul>
+          </div> 
         </div>
 
         <div class="form-group row description-data">
@@ -69,6 +79,11 @@
             <!-- <input class="form-control" type="text" id="coordinator_name" name="coordinator_name" ngModel> -->
             <app-show-coordinators [coordinatorData]="specificDrivePanelist" (coordiatorData)="coordinatorDetails($event)"  ngModel></app-show-coordinators>
           </div>
+          <div class="anyClass col-sm-3" *ngIf="showPanelist">
+            <ul>
+              <li class="candidate-list" *ngFor="let item of selectedCoordinator">{{item}}</li>
+            </ul>
+          </div> 
         </div>
         <div class="container-fluid ">
           <div class="success-button">
